# vc-rust

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-03-18-sdk-v1-api-alignment.md  2026-03-30-sdk-v2-api-rewrite.md  2026-03-30-sdk-v2-endpoint-expansion.md
docs/superpowers/specs/: 2026-03-17-vynco-rust-sdk-design.md  2026-03-30-vynco-sdk-v2-design.md
examples/: vynco_cli.rs
src/: blocking.rs  client.rs  error.rs  lib.rs  response.rs  types.rs
src/resources/: ai.rs  alerts.rs  analytics.rs  api_keys.rs  auditors.rs  billing.rs  changes.rs  companies.rs  credits.rs  dashboard.rs  dossiers.rs  exports.rs  graph.rs  health.rs  mod.rs  news.rs  ownership.rs  persons.rs  pipelines.rs  relationships.rs  reports.rs  saved_searches.rs  screening.rs  settings.rs  teams.rs  users.rs  watches.rs  watchlists.rs  webhooks.rs
tests/: e2e.rs  test_client.rs
