[package]
name = "vynco"
version = "2.2.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
authors = ["VynCo <hello@vynco.ch>"]
description = "Rust SDK for the VynCo Swiss Corporate Intelligence API"
repository = "https://github.com/VynCorp/vc-rust"
homepage = "https://vynco.ch"
documentation = "https://docs.rs/vynco"
readme = "README.md"
keywords = ["vynco", "swiss", "corporate", "zefix", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = ["docs/", "CLAUDE.md"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mockito = "1"
clap = { version = "~4.5.23", features = ["derive", "env"] }

[[example]]
name = "vynco_cli"
path = "examples/vynco_cli.rs"

[features]
default = ["rustls-tls"]
blocking = []
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
